[package]
edition = "2021"
name    = "falling-object-helmet-rs"
version = "0.1.0"

[[bin]]
name = "falling-object-helmet-rs"
path = "./src/bin/async_main.rs"

[dependencies]
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-backtrace = { version = "0.15.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32", "unstable"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
fugit = "0.3.7"
log = { version = "0.4.21" }
smart-leds = "0.4.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
ws2812-spi = "0.5.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
